# QGIS

./: .gitignore  CMakeLists.txt
.github/workflows/: mingw64.yml
doc/: api_break.dox
images/: images.qrc
ms-windows/mingw/: build.sh
ms-windows/osgeo4w/: msvc-env.bat  package.cmd
python/: CMakeLists.txt
python/core/auto_generated/: qgsmaskidprovider.sip.in
python/server/auto_generated/: qgsconfigcache.sip.in  qgsservercachefilter.sip.in  qgsservice.sip.in
scripts/: astyle.options
src/3d/: qgsvirtualpointcloudentity_p.cpp
src/3d/materials/: qgsabstractmaterialsettings.h
src/3d/terrain/: qgsdemterraintilegeometry_p.cpp
src/analysis/raster/: qgsrastercalculator.cpp
src/analysis/vector/: qgsgeometrysnapper.cpp
src/app/: qgisapp.cpp  qgisapp.h  qgsapplayertreeviewmenuprovider.cpp  qgslayercapabilitiesmodel.cpp  qgslayercapabilitiesmodel.h  qgslayerstylingwidget.cpp  qgsprojectproperties.cpp  qgsprojectproperties.h
src/app/annotations/: qgsannotationlayerproperties.cpp  qgsannotationlayerproperties.h
src/app/options/: qgscodeeditoroptions.cpp  (+1 more)
src/core/: CMakeLists.txt  qgis.h  qgsaction.cpp  qgsapplication.cpp  qgsapplication.h  qgsdataprovider.h  qgsdatasourceuri.cpp  qgseditformconfig.cpp  qgseditformconfig.h  qgsfeatureiterator.cpp  qgsfeaturerequest.cpp  qgsfeaturerequest.h  qgsfontutils.cpp  qgsfontutils.h  qgsjsonutils.cpp  qgsjsonutils.h  qgslegendrenderer.cpp  qgslegendsettings.h  qgsmaplayer.cpp  qgsmaprendererparalleljob.cpp  qgsmapthemecollection.cpp  qgsmapthemecollection.h  qgsmessagelog.cpp  qgsogcutils.cpp  qgsogcutils.h  qgsproject.cpp  qgsproject.h  qgsprojectservervalidator.cpp  qgsprojectservervalidator.h  qgsprojutils.cpp  qgsspatialiteutils.cpp  qgsvectorlayer.cpp  qgsvectorlayer.h  qgsvectorlayerrenderer.cpp  qgsvectorlayerrenderer.h  sbjoinedtoggleutils.cpp  sbjoinedtoggleutils.h  sbminpixelsizefilterutils.cpp  sbminpixelsizefilterutils.h
src/gui/: CMakeLists.txt  qgsadvanceddigitizingdockwidget.cpp  qgsattributeform.cpp  qgsdoublevalidator.cpp  qgsmaptoolidentify.cpp  qgsmediawidget.cpp  qgsmetadatawidget.cpp  qgsmetadatawidget.h  qgsnewauxiliarylayerdialog.cpp  qgsprojectionselectiontreewidget.cpp  sbjoinedtogglewidget.cpp  sbjoinedtogglewidget.h
src/plugins/: CMakeLists.txt
src/plugins/sb_address_services/: CMakeLists.txt  README  sbaddressservices.cpp  sbaddressservices.h  sbaddressservices.qrc  sbaddressservicesgui.cpp  sbaddressservicesgui.h  sbaddressservicesguibase.ui  sbaddressservicesmaptool.cpp  sbaddressservicesmaptool.h  sbaddressservicesplugin.cpp  sbaddressservicesplugin.h
src/plugins/sb_elevation_services/: CMakeLists.txt  README  sbelevationservices.cpp  sbelevationservices.h  sbelevationservices.qrc  sbelevationservicesgui.cpp  sbelevationservicesgui.h  sbelevationservicesguibase.ui  sbelevationservicesmaptool.cpp  sbelevationservicesmaptool.h  sbelevationservicesplugin.cpp  sbelevationservicesplugin.h
src/providers/sbmapguiderest/: CMakeLists.txt  qgssbmapguiderestprovider.cpp  qgssbmapguiderestprovider.h
src/python/: qgspythonutilsimpl.cpp
src/server/: CMakeLists.txt  qgis_map_serv.cpp  qgis_mapserver.cpp  qgsbufferserverrequest.cpp  qgsconfigcache.cpp  qgsconfigcache.h  qgsfcgiserverrequest.cpp  qgsfeaturefilter.cpp  qgsfeaturefilter.h  qgsfeaturefilterprovidergroup.cpp  qgsrequesthandler.cpp  qgsserver.cpp  qgsserver.h  qgsservercachefilter.cpp  qgsservercachefilter.h  qgsservercachemanager.cpp  qgsservercachemanager.h  qgsserverfeatureid.cpp  qgsserverfeatureid.h  qgsserverfilter.cpp  qgsserverinterface.h  qgsserverinterfaceimpl.cpp  qgsserverinterfaceimpl.h  qgsserverlogger.cpp  qgsserverlogger.h  qgsserverparameters.cpp  qgsserverparameters.h  qgsserverprojectutils.cpp  qgsserverprojectutils.h  qgsserverrequest.cpp  qgsserversettings.cpp  qgsserversettings.h  qgsservice.h  qgsserviceregistry.cpp  qgsserviceregistry.h  sbUnloadProjectFileWatcher.cpp  sbUnloadProjectFileWatcher.h  sb_mapserver.cpp  sbconstants.h  sbservercachefilter.cpp  (+3 more)
src/server/services/: CMakeLists.txt
src/server/services/DummyService/: CMakeLists.txt  dummy.cpp
src/server/services/landingpage/: CMakeLists.txt  qgslandingpageutils.cpp
src/server/services/sb/: CMakeLists.txt  qgssb.cpp  qgssbconvertproject.cpp  qgssbconvertproject.h  qgssbgetdecryptedpath.cpp  qgssbgetdecryptedpath.h  qgssbgetencryptedpath.cpp  qgssbgetencryptedpath.h  qgssbgetlayermetadata.cpp  qgssbgetlayermetadata.h  qgssbgetlayersymbol.cpp  qgssbgetlayersymbol.h  qgssbgetserverinfo.cpp  qgssbgetserverinfo.h  qgssbgetserverprocessid.cpp  qgssbgetserverprocessid.h  qgssbpurgecache.cpp  qgssbpurgecache.h  qgssbserviceexception.h  qgssbsetpreloadprojects.cpp  qgssbsetpreloadprojects.h  qgssbsetunloadprojects.cpp  qgssbsetunloadprojects.h
src/server/services/wcs/: CMakeLists.txt  qgswcs.cpp
src/server/services/wfs/: qgswfs.cpp  qgswfsgetcapabilities.cpp  qgswfsgetcapabilities.h  qgswfsgetcapabilities_1_0_0.cpp  qgswfsgetcapabilities_1_0_0.h  qgswfsgetfeature.cpp  qgswfsparameters.cpp  qgswfsparameters.h  qgswfstransaction.cpp  qgswfstransaction.h  qgswfstransaction_1_0_0.cpp  qgswfstransaction_1_0_0.h  qgswfsutils.cpp  qgswfsutils.h
src/server/services/wms/: CMakeLists.txt  libProfiler.cpp  libProfiler.h  qgsmaprendererjobproxy.cpp  qgswms.cpp  qgswmsgetcapabilities.cpp  qgswmsgetcapabilities.h  qgswmsgetlegendgraphics.cpp  qgswmsgetlegendgraphics.h  qgswmsgetmap.cpp  qgswmslayerinfos.cpp  qgswmsparameters.cpp  qgswmsparameters.h  qgswmsrendercontext.cpp  qgswmsrendercontext.h  qgswmsrenderer.cpp  qgswmsrenderer.h  qgswmsrequest.cpp  qgswmsrequest.h  qgswmsrestorer.cpp  qgswmsrestorer.h  qgswmsutils.cpp  qgswmsutils.h
src/server/services/wmts/: CMakeLists.txt  qgswmts.cpp  qgswmtsgetcapabilities.cpp  qgswmtsgetcapabilities.h  qgswmtsgetfeatureinfo.cpp  qgswmtsgetfeatureinfo.h  qgswmtsgettile.cpp  qgswmtsgettile.h  qgswmtsutils.cpp  qgswmtsutils.h
src/ui/: qgspointcloudlayerpropertiesbase.ui  qgsprojectpropertiesbase.ui  qgsrasterlayerpropertiesbase.ui  qgsvectorlayerpropertiesbase.ui  qgsvectortilelayerpropertiesbase.ui  sbjoinedtogglewidget.ui
(+105 files in other folders)
